flux/apps/ai/ollama/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: default
spec:
  selector:
    matchLabels:
      app: ollama
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ollama
    spec:
      nodeSelector:
        gpu: "true"
      tolerations:
        - key: gpu
          operator: Equal
          value: "true"
          effect: NoSchedule
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: ollama
          image: ollama/ollama:0.40.2
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              # memory: 100Mi
          ports:
            - containerPort: 11434
          volumeMounts:
            - name: ollama-data
              mountPath: /root/.ollama
            - name: dri
              mountPath: /dev/dri
            - name: kfd
              mountPath: /dev/kfd
      volumes:
        - name: ollama-data
          nfs:
            server: datasphere
            path: /Root/Volumes/ollama
        - name: dri
          hostPath:
            path: /dev/dri
        - name: kfd
          hostPath:
            path: /dev/kfd
